--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# MONGO_URI=mongodb+srv://ashishrahi05:ashishrahi05@cluster0.wpj5hqn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://ashishrahi05:hFxZEhhCHTZYiRR8@cluster0.zs9ruzo.mongodb.net/
 REDIS_URL=redis://localhost:6379
 PORT=3001
-MONGO_URI=mongodb://localhost:27017/jobSchedule
+# MONGO_URI=mongodb://localhost:27017/jobSchedule
