--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://ashishrahi05:hFxZEhhCHTZYiRR8@cluster0.zs9ruzo.mongodb.net/
+# MONGO_URI=mongodb+srv://ashishrahi05:hFxZEhhCHTZYiRR8@cluster0.zs9ruzo.mongodb.net/
 REDIS_URL=redis://localhost:6379
 PORT=3001
-# MONGO_URI=mongodb://localhost:27017/jobSchedule
+MONGO_URI=mongodb://localhost:27017/jobSchedule
