--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.16.3",
     "node-cron": "^4.2.1",
     "redis": "^5.6.0",
