--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^8.16.3",
     "node-cron": "^4.2.1",
     "redis": "^5.6.0",
+    "socket": "^1.0.50",
+    "socket.io": "^4.8.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
