--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "concurrently \"npm:dev-server\" \"npm:worker\"",
+    "dev-server": "nodemon server.js",
     "worker": "node src/workers/worker.js"
   },
   "keywords": [],
@@ -26,9 +27,11 @@
     "redis": "^5.6.0",
     "socket": "^1.0.50",
     "socket.io": "^4.8.1",
+    "winston": "^3.17.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "concurrently": "^9.2.0",
     "nodemon": "^3.1.10"
   }
 }
